Login - Point to Sandbox testing server 2.20 version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -246,7 +246,7 @@
     <!-- String array for server instance url -->
     <string-array name="url_array">
         <item>\t\t\t[Select a Server URL]</item>
-        <item>http://ishp.dhis.dhmis.org/staging</item>
+        <item>http://lusanda.dhis.dhmis.org</item>
     </string-array>
 
 </resources>
