--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -247,6 +247,7 @@
     <string-array name="url_array">
         <item>\t\t\t[Select a Server URL]</item>
         <item>http://ishp.dhis.dhmis.org</item>
+        <item>http://ishp.dhis.dhmis.org/staging</item>
     </string-array>
 
 </resources>
