added 4 hours sync period

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,6 +154,7 @@
         <item>1 Hour</item>
         <item>1 Day</item>
         <item>Disabled</item>
+        <item>4 Hours</item>
     </string-array>
     
     <string-array name="copy_store_error_message">
